stop subnav from overlapping main, move page nav

--- a/theme/css/base.css
+++ b/theme/css/base.css
@@ -19,12 +19,8 @@ ul.nav li.main {
   font-weight: bold;
 }
 
-div.col-md-3 {
-  padding-left: 0;
-}
-
 div.col-md-9 {
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 
 div.source-links {
